# wifiqr

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: README.md  ci.yml
src/wifiqr/: __init__.py  generator.py
tests/: test_cli.py  test_import.py
